--- a/TigerCheckAndroid/app/src/main/res/layout/activity_main_station.xml
+++ b/TigerCheckAndroid/app/src/main/res/layout/activity_main_station.xml
@@ -19,16 +19,17 @@
             android:id="@+id/barcode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/barcode_edit_text"
+            android:hint="@string/barcode_edit_text"
             android:textSize="@dimen/default_font_size"
-            android:inputType="text" />
+            android:inputType="number" />
     
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/submit_button"
             android:textSize="@dimen/default_font_size"
-            android:layout_toRightOf="@+id/barcode" />"
+            android:layout_toRightOf="@+id/barcode"
+            android:onClick="checkBarcode"/>
     </RelativeLayout>
 
     <!-- Button that allows user to change stations -->
