--- a/TigerCheckAndroid/app/src/main/res/layout/activity_main_station.xml
+++ b/TigerCheckAndroid/app/src/main/res/layout/activity_main_station.xml
@@ -19,18 +19,17 @@
             android:id="@+id/barcode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/barcode_edit_text"
+            android:hint="@string/barcode_edit_text"
             android:textSize="@dimen/default_font_size"
-            android:inputType="text" />
-
+            android:inputType="number" />
+    
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/submit_button"
             android:textSize="@dimen/default_font_size"
             android:layout_toRightOf="@+id/barcode"
-            android:id="@+id/submitButton"
-            android:onClick="onMainStationSubmit" />"
+            android:onClick="checkBarcode"/>
     </RelativeLayout>
 
     <!-- Button that allows user to change stations -->
@@ -40,7 +39,7 @@
         android:layout_alignParentBottom="true"
         android:gravity="center"
         android:onClick="changeStationsBtnLstr"
-        android:text="Exit Program"
+        android:text="@string/exit_button"
         android:textSize="@dimen/default_font_size" />
 
 </RelativeLayout>
