--- a/TigerCheckAndroid/app/src/main/res/layout/activity_dental.xml
+++ b/TigerCheckAndroid/app/src/main/res/layout/activity_dental.xml
@@ -14,9 +14,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Dental"
         android:id="@+id/textView"
+        android:textSize="50dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="50dp" />
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="wrap_content"
