--- a/TigerCheckAndroid/app/src/main/res/layout/activity_heart.xml
+++ b/TigerCheckAndroid/app/src/main/res/layout/activity_heart.xml
@@ -14,9 +14,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Heart"
         android:id="@+id/textView"
+        android:textSize="50dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="50dp" />
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -24,7 +24,7 @@
         android:id="@+id/editText"
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp"
+        android:layout_marginTop="47dp"
         android:hint="Enter Heart Data Here" />
 
     <Button
