--- a/TigerCheckAndroid/app/src/main/res/layout/activity_heart_rate.xml
+++ b/TigerCheckAndroid/app/src/main/res/layout/activity_heart_rate.xml
@@ -14,9 +14,9 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Heart Rate"
         android:id="@+id/textView"
+        android:textSize="50dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="50dp" />
+        android:layout_centerHorizontal="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -25,7 +25,7 @@
         android:hint="Enter Heart Rate Here"
         android:layout_above="@+id/button"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp" />
+        android:layout_marginBottom="47dp" />
 
     <Button
         android:layout_width="wrap_content"
