Fixed the bug and more clean up
see title

--- a/TigerCheckAndroid/app/src/main/res/layout/activity_ears.xml
+++ b/TigerCheckAndroid/app/src/main/res/layout/activity_ears.xml
@@ -33,5 +33,6 @@
         android:text="Submit"
         android:id="@+id/button"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="earsSubmitted" />
 </RelativeLayout>
