--- a/TigerCheckAndroid/app/src/main/res/layout/activity_main_station.xml
+++ b/TigerCheckAndroid/app/src/main/res/layout/activity_main_station.xml
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:gravity="center"
-        android:onClick="changeStationsBtnLstr"
+        android:onClick="exitApplicationClicked"
         android:text="@string/exit_button"
         android:textSize="@dimen/default_font_size" />
 
