--- a/TigerCheckAndroid/app/src/main/res/layout/activity_blood_pressure.xml
+++ b/TigerCheckAndroid/app/src/main/res/layout/activity_blood_pressure.xml
@@ -19,21 +19,21 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:hint="Enter Blood Pressure Here"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:singleLine="false"
-        android:layout_above="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="47dp" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Submit"
         android:id="@+id/button"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="bloodPressureSubmitted" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="47dp"
+        android:hint="Enter Blood Pressure Here" />
 </RelativeLayout>
