--- a/TigerCheckAndroid/app/src/main/res/layout/activity_height_weight.xml
+++ b/TigerCheckAndroid/app/src/main/res/layout/activity_height_weight.xml
@@ -43,5 +43,6 @@
         android:id="@+id/button"
         android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="52dp" />
+        android:layout_marginTop="52dp"
+        android:onClick="heightWeightSubmitted" />
 </RelativeLayout>
