--- a/TigerCheckAndroid/app/src/main/res/layout/activity_respiration_rate.xml
+++ b/TigerCheckAndroid/app/src/main/res/layout/activity_respiration_rate.xml
@@ -29,7 +29,8 @@
         android:text="Submit"
         android:id="@+id/button"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:onClick="respirationSubmitted" />
 
     <EditText
         android:layout_width="wrap_content"
